--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 a{
     text-decoration: none;
-    color: inherit;
 }
 
  ul, ol,li{
@@ -15,33 +14,142 @@ a{
 }
  
 body{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color:  #2B4A56;
+    height: 100%;
+    width: 100%;
+    /* display: flex; */
+    background-color: white;
+    /* justify-content: space-between; */
 }
  
 header{
-    height: 10vh;
+    height: 13vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-html, body{
-    scroll-behavior: smooth;
-}
-
 .fundo img{
-    height: 90vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    position: static;
+}
+.fundo {
+    position: static;
+    display: flex;
+    align-items: center;
 }
 
 .icons img{
     width: 6vw;
-    height: -16vh;
+    height: 10vh;
+}
+.icons{
+    position: absolute;
+    display: flex;
+}
+
+.ballet{
+    margin-left: 55vw;
+    
 }
 
 .micro{
+    margin-left: 6vw;
+}
 
+.teatro{
+    margin-left: 7vw;
+}
+
+.tango{
+    margin-left: 6vw;
+}
+
+
+.logo{
+    height: 25vh;
+    margin-top: 13vh;
+    margin-left: 2vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+}
+
+.logo img{
+    height: 8vh;
+}
+
+#estrela{
+    font-size: 4vh;
+    color: #FBF6E6;
+}
+
+.perfil{
+    height: 3vh;
+    width: 50vw;
+}
+
+.nome h2{
+    margin-top: 5vh;
+    margin-left: 26vw;
+    font-size: 4vh;
+}
+
+.nome h3{
+    margin-top: 6vh;
+    margin-left: 26vw;
+    color: gray;
+    font-size: 2.5vh;
+}
+
+ul {
+    list-style-type: circle;
+    margin-left: 26vw;
+    font-size: 2.2vh;
+}
+
+.texto1{
+    margin-top: 3.6vh;
+}
+
+.texto2{
+    margin-top: 2vh;
+}
+
+.nome2 {
+    color: gray;
+    font-size: 2vh;
+}
+
+.nome2 h3{
+    margin-top: -13.8vh;
+    margin-left: 50vw;
+}
+
+.texto3{
+    margin-top: 3.6vh;
+    margin-left: 24vw;
+}
+
+.texto4{
+    margin-top: 2vh;
+    margin-left: 24vw;
+
+}
+
+.texto5{
+    margin-top: 2vh;
+    margin-left: 24vw;
+}
+
+.texto6{
+    margin-top: 2vh;
+    margin-left: 24vw;
+}
+
+.engrenagem img{
+    margin-top: 2vh;
+    margin-left: 87vw;
 }
